--- a/components.json
+++ b/components.json
@@ -8,7 +8,7 @@
     "css": "src/globals.css",
     "baseColor": "slate",
     "cssVariables": true,
-    "prefix": "tailwind.config.js"
+    "prefix": ""
   },
   "aliases": {
     "components": "@/components",
